# QAOA-TSP-supaero-mae-reasearch

./: .gitignore  Makefile  README.md  optimisation  optimisation.cpp  qaoa.cpp  qaoa.h  qaoa.hpp  tb  tb.cpp
.rigel_lopper/: lop-cpu-oslist.dts.pp  system-top.dts.pp
HLS_codes/: cpu_qaoa  optimisation.cpp  qaoa.cpp  qaoa.hpp  tb.cpp
_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py
_ide/.wsdata/: .repo.yaml  clang_dir_map.json  version.ini
vitis_app/: .gitignore  compile_commands.json  vitis-comp.json
vitis_app/_ide/: hwspec.checksum  launch.json  workspace_journal.py
vitis_app/src/: CMakeLists.txt  app.yaml  main.c
vitis_hls/: .gitignore
vitis_hls/_ide/: .peers.ini  settings.json  workspace_journal.py  workspace_journal_19967.py  workspace_journal_22937.py  workspace_journal_36437.py  workspace_journal_39714.py
vitis_hls/rp_qaoa/: compile_commands.json  hls_config.cfg  vitis-comp.json
vitis_hls/rp_qaoa/qaoa_kernel/: qaoa_kernel.hlscompile_summary  qaoa_kernel.hlsrun_cosim_summary  qaoa_kernel.hlsrun_csim_summary  qaoa_kernel.hlsrun_package_summary
vitis_hls/rp_qaoa/qaoa_kernel/hls/: config.cmdline  hls_data.json
vitis_platform/: .gitignore  vitis-comp.json
vitis_platform/hw/sdt/: pl.dtsi  qaoa_wrapper.bit  system-top.dts
vitis_platform/zynq_fsbl/: CMakeLists.txt  app.yaml  compile_commands.json
vitis_platform/zynq_fsbl/zynq_fsbl_bsp/: bsp.yaml  lib_list.yaml  lop-config.dts.dtb  lop-config.dts.pp
vitis_platform/zynq_fsbl/zynq_fsbl_bsp/hw_artifacts/drivers/qaoa_kernel_v1_0/src/: CMakeLists.txt
(+640 files in other folders)
